# rubikon-backend

./: .flake8  .gitignore  .gitlab-ci.yml  .nginx  CHANGELOG.md  Dockerfile  Makefile  README.md  default.conf  dev.requirements.txt  docker-compose.prod.yml  docker-compose.yaml  example.env  prod.Dockerfile  pyproject.toml  pytest.ini  requirements.txt  tox.ini  uwsgi.ini
contact/: admin.py  models.py  serializers.py  views.py
contact/migrations/: 0001_initial.py
core/: settings.py  urls.py
core/models/: banner.py
orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_orderitem_filter_values.py  0003_wishlist.py  0004_orderitem_sale.py  0005_cartitem.py
products/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_banner.py  0002_promobanner_delete_banner.py  0003_filtertype_filtervalue_product_filters_and_more.py  0003_promobanner_image_mobile.py  0004_product_vendor_code_product_vendor_code_public.py  0004_productreview.py  0005_productproperty.py  0006_filtertype_category.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
