[tool.poetry]
name = "django-template"
version = "1.0.0"
description = "Django template for Codnity Python-based projects."
authors = ["vlad <vladislavs@codnity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
show-fixes = true
line-length = 92
indent-width = 4
target-version = "py312"
exclude = ["**/migrations/*", "manage.py"]

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.ruff.lint]
extend-select = [
    "B",
    "BLE",
    "C",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "ICN",
    "INP",
    "N",
    "PL",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "PT",
    "UP",
    "DJ",
    "W",
]
ignore = []
preview = true
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 40